# readmerator

./: .gitignore  README.md  pyproject.toml  requirements.txt  test-requirements.txt
example-fullstack/: GUIDE.md  README.md  package.json  requirements.txt
example-fullstack/backend/: app.py
example-fullstack/frontend/: App.jsx  package.json
readmerator/: __init__.py  __main__.py  cli.py  fetcher.py  parser.py
tests/: test_parser.py
